# Cloth-Simulation

./: Cargo.toml
examples/: instances.rs
src/: compute.wgsl  main.rs  red.wgsl  shader_instances.wgsl
